Test/invalid_tests/bad_5.rwlz
// ERROR: String literal sin cerrar - falta comilla de cierre
[BepInPlugin("TestMod", "Unclosed String Test", "1.0")]

/* Error: string sin cerrar */

int BadFunction() {
    print("This string is not closed);
    return 0;
}